Fix track name overflow

--- a/src/Sequencer/components/SequencerTracks/SequencerTrackHeader/SequencerTrackHeader.scss
+++ b/src/Sequencer/components/SequencerTracks/SequencerTrackHeader/SequencerTrackHeader.scss
@@ -7,6 +7,7 @@
     border-radius: 4px;
     box-sizing: border-box;
     margin: 4px;
+    padding: 0 6px;
 
     &--selected {
         border: 1px solid $color-primary;
@@ -17,11 +18,7 @@
         vertical-align: middle;
         text-overflow: ellipsis;
         overflow: hidden;
-    }
-
-    &--drag-over {
-        // border-radius: 3px;
-        // outline: 5px double $color-primary;
-        // background-color: $color-primary;
+        white-space: nowrap;
+        width: 100%;
     }
 }
